@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Highlight rules when the same token.
+Nicolas Weeger 2010-05-15
+
 Preliminary message file (.msg) support. No edition yet.
 Nicolas Weeger 2010-05-15
 
